# mixmod

./: .gitignore  Cargo.toml  Makefile  README.md  example.task.json  mixmod-codex-only.mixmod-pilot3-codex-only-v2.json  opencode.json
.codex/: config.toml  hooks.json  mixmod-instructions.md
.codex/hooks/: mixmod-hook.sh
.github/workflows/: check.yml
.mixmod/: config.toml
docs/: architecture.md  artifacts.md  benchmark-hygiene.md  exploration.md  latest-benchmark.md  supervision.md  swebench-current-default-v1-10.md  swebench-current-default-v1.md  swebench-explicit-gpt55-high-v1.md
scripts/: __init__.py  deepswe_artifacts.py  deepswe_codex_app_agent.py  deepswe_mixmod_agent.py  deepswe_run_codex_only.py  deepswe_run_mixmod_from_codex_only.py  deepswe_run_mixmod_selected.py  deepswe_run_with_worker.sh  deepswe_screen_codex_pass.py  deepswe_setup_llama_worker.sh  deepswe_teardown_llama_worker.sh  llama_server_qwen36.sh  mixmod_bench_cmd.sh  pier_host_network_env.py  run_qwen36_llama_server.sh  swebench_run_codex_only.py  swebench_run_exec_batch.py  swebench_run_mixmod_selected.py  swebench_screen_codex_pass.py
src/: agent_strategy.rs  artifacts.rs  checkpoint.rs  cli.rs  config.rs  default_strategy.rs  default_strategy_policy.rs  default_strategy_support.rs  diff.rs  experiment.rs  frontier.rs  fs_util.rs  install.rs  interventions.rs  lib.rs  live.rs  loop_summary.rs  main.rs  opencode.rs  report.rs  run.rs  state.rs  strategy_metrics.rs  supervisor.rs  supervisor_tool_proxy.rs  task.rs  tests.rs  tool_events.rs
src/run/: mod.rs  (+6 more)
tests/: cli.rs  exec_e2e.rs
(+248 files in other folders)
