[package]
name = "mixmod"
version = "0.1.0"
edition = "2024"
description = "Reduce supervisor-model cost with worker models"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rndhouse/mixmod"
exclude = [
    "/.github/",
    "/.mixmod/",
    "/Cargo.toml.orig",
    "/logs/",
    "/mixmod-codex-only*.json",
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
